crates/jarl-core/src/lints/base/group_by_ungroup/snapshots/jarl_core__lints__base__group_by_ungroup__tests__slice_max.snap
---
source: crates/jarl-core/src/lints/base/group_by_ungroup/mod.rs
expression: "snapshot_lint(\"x |> group_by(grp) |> slice_max(val) |> ungroup()\")"
---
warning: group_by_ungroup
 --> <test>:1:6
  |
1 | x |> group_by(grp) |> slice_max(val) |> ungroup()
  |      -------------------------------------------- `group_by()` followed by `slice_max()` and `ungroup()` can be simplified.
  |
  = help: Use `slice_max(..., .by = grp)` instead.
Found 1 error.
