crates/jarl-core/src/lints/base/group_by_ungroup/snapshots/jarl_core__lints__base__group_by_ungroup__tests__slice_tail.snap
---
source: crates/jarl-core/src/lints/base/group_by_ungroup/mod.rs
expression: "snapshot_lint(\"x |> group_by(grp) |> slice_tail(n = 1) |> ungroup()\")"
---
warning: group_by_ungroup
 --> <test>:1:6
  |
1 | x |> group_by(grp) |> slice_tail(n = 1) |> ungroup()
  |      ----------------------------------------------- `group_by()` followed by `slice_tail()` and `ungroup()` can be simplified.
  |
  = help: Use `slice_tail(..., .by = grp)` instead.
Found 1 error.
